♻️ refactor: response 조정